fix header collapse menu ip6/7/8plus

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1288,7 +1288,7 @@ footer {
     li {
       margin: 0 1.5rem;
 
-      a {
+      .header-link {
         transition: 0s;
       }
     }
@@ -1684,7 +1684,7 @@ footer {
       text-align: center;
       margin-top: 46px;
 
-      a {
+      .header-link {
         display: block;
         transition: .1s;
         font-size: 16px;
@@ -1702,6 +1702,7 @@ footer {
       ul {
         flex-direction: column;
         justify-content: space-between;
+        padding-bottom: 200px;
       }
     }
 
